# atcoder_heuristic_contest

./: .gitignore  README.md
006_A_FoodDelivery/: 006_A_FoodDelivery.py
006_FoodDelivery/: 1.py  2.py  3.py  4.py  6.py  7.py  8.py  README.md
007_A_OnlineMST/: 007_A_OnlineMST.py
007_OnlineMST/: README.md
008_Territory/: README.md
009_A_RobustMemory-of-CommutingRoutes/: 0.py  5.py  7.py
009_RobustMemory-of-CommutingRoutes/: 1.py  2.py  3.py  4.py  6.py  README.md
010_A_LoopLines/: 7.py
010_LoopLines/: 4.py  README.md  main.py
010_LoopLines/submitted_logs/: 1.py  6.py
011_SlidingTreePuzzle/: README.md
011_SlidingTreePuzzle/sliding-tree-puzzle/: .gitignore  Cargo.toml  calc.sh  calc_total_score.py
011_SlidingTreePuzzle/sliding-tree-puzzle/src/: main.rs
014_RectJoin/rectjoin/: .gitignore  Cargo.toml  README.md  calc_multi_seed.sh  calc_total_score.py
014_RectJoin/rectjoin/src/: main.rs
014_RectJoin/rectjoin/util/: calc_multi_seed.sh  calc_total_score.py
