[package]
name = "rectjoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "1"
path = "src/bin/1.rs"

[[bin]]
name = "2"
path = "src/bin/2.rs"

[[bin]]
name = "3"
path = "src/bin/3.rs"

[[bin]]
name = "4"
path = "src/bin/4.rs"

[[bin]]
name = "5"
path = "src/bin/5.rs"
